--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   },
   "dependencies": {
     "gatsby": "^3.13.1",
+    "gatsby-plugin-mdx": "^2.14.0",
+    "gatsby-source-contentful": "^5.14.0",
+    "gatsby-source-filesystem": "^3.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
